...
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/imageHowToUse"
            android:layout_width="match_parent"
            android:layout_height="640dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:paddingBottom="100dp"
            android:src="@drawable/smiley_super_happy" />

        <ImageButton
            android:id="@+id/historyButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignEnd="@+id/imageHowToUse"
            android:layout_alignRight="@+id/imageHowToUse"
            android:layout_alignBottom="@+id/imageHowToUse"
            android:layout_marginEnd="15dp"
...
