<resources>
    <string name="app_name">MoodTracker</string>
    <string name="today">Today</string>
</resources>
